TestOptionsWithRanges fails with -XX:OldPLABSize=2147483648

XMLWordPrintable

    • gc
    • b115
    • Verified

      test result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: 1 tests failed! (Error processing option OldPLABSize with valid value '-server -XX:+UseParallelGC -XX:OldPLABSize=2147483648'! JVM output reports a fatal error. JVM exited with code 134!) (assert failed: 1 == 0)

      # Internal Error (/scratch/opt/jprt/T/P1/195923.christian/s/hotspot/src/share/vm/gc/parallel/psPromotionLAB.cpp:89), pid=51433, tid=51486
      # assert((array_length * (HeapWordSize/sizeof(jint))) < (size_t)max_jint) failed: array too big in PSPromotionLAB

            Assignee:
            Sangheon Kim (Inactive)
            Reporter:
            Joseph Provino (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: