8153201: TestOptionsWithRanges fails with -XX:OldPLABSize=2147483648

Add parallel gc into min/max PLAB constraint function

Reviewed-by: brutisso, tbenson